debug and test apis
