# docs/swagger.json
@@ -53,8 +53,15 @@
                     },
                     {
                         "type": "string",
-                        "description": "Article Summary",
-                        "name": "summary",
+                        "description": "Article Short Summary",
+                        "name": "short_summary",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Article Full Text",
+                        "name": "full_text",
                         "in": "formData",
                         "required": true
                     },
@@ -73,11 +80,10 @@
                         "required": true
                     },
                     {
-                        "type": "file",
-                        "description": "PDF File",
-                        "name": "pdf_file",
-                        "in": "formData",
-                        "required": true
+                        "type": "integer",
+                        "description": "Article Reading Time",
+                        "name": "reading_time",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -146,8 +152,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "Article Summary",
-                        "name": "summary",
+                        "description": "Article Short Summary",
+                        "name": "short_summary",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Article Full Text",
+                        "name": "full_text",
                         "in": "formData"
                     },
                     {
@@ -163,9 +175,9 @@
                         "in": "formData"
                     },
                     {
-                        "type": "file",
-                        "description": "PDF File",
-                        "name": "pdf_file",
+                        "type": "integer",
+                        "description": "Article Reading Time",
+                        "name": "reading_time",
                         "in": "formData"
                     }
                 ],
@@ -639,13 +651,16 @@
                 "cover_image": {
                     "type": "string"
                 },
+                "full_text": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
-                "pdf_file": {
-                    "type": "string"
+                "reading_time": {
+                    "type": "integer"
                 },
-                "summary": {
+                "short_summary": {
                     "type": "string"
                 },
                 "title": {
