# internal/article/model.go
@@ -1,10 +1,11 @@
 package article
 
 type Article struct {
-	ID          int     `json:"id"`
-	Title       string  `json:"title"`
-	Summary     string  `json:"summary"`
-	Author      string  `json:"author"`
-	Cover_image string  `json:"cover_image"`
-	Pdf_file    *string `json:"pdf_file"`
+	ID            int    `json:"id"`
+	Title         string `json:"title"`
+	Short_summary string `json:"short_summary"`
+	Full_text     string `json:"full_text"`
+	Author        string `json:"author"`
+	Cover_image   string `json:"cover_image"`
+	Reading_time  *int   `json:"reading_time"`
 }
